# roibin-sz3-experiments

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  estimate_mem.py  parse_opt.py  parse_results.py  read_profiles.py  roibin_sz.o4670266  roibin_sz.o4670266.csv  roibin_sz.o4692185  roibin_sz.o4692185.csv  roibin_sz.o4714484  roibin_sz.o4718698  roibin_sz.o4742038  roibin_sz.o4742629  roibin_sz.o4742667  roibin_sz.o4743941  roibin_sz.o4751026  roibin_sz.o4758523  roibin_sz.o4889916  roibin_sz.o4890197  roibin_sz_large.o4876747  roibin_sz_large.o4882367  roibin_sz_large.o5027760  run_all.sh  run_debug.qsub  run_large.sh  spack.lock.palmetto  spack.yaml  visualize_results.py
example_data/: .gitattributes  cxic0415_0020.cxi
include/: cleanup.h  debug_helpers.h  file_helpers.h  hdf5_helpers.h
share/: blosc-6.json  blosc-9.json  blosc.json  bzip2-6.json  bzip2-9.json  mgard-30.json  mgard-60.json  mgard-90.json  mgard.json  roibin_blosc-6.json  roibin_blosc-9.json  roibin_blosc.json  roibin_bzip-6.json  roibin_bzip-9.json  roibin_fpzip.json  roibin_mgard.json  roibin_qoz.json  roibin_sz.json  roibin_sz3.json  roibin_zfp.json  sz-30.json  sz-60.json  sz-90.json  sz.json  sz3-30.json  sz3-60.json  sz3-90.json  zfp-30.json  zfp-60.json  zfp-90.json  zfp.json
share/opt/: blosc3_opt.json  blosc6_opt.json  blosc9_opt.json  roibinblosc3_opt.json  roibinblosc6_opt.json  roibinblosc9_opt.json  roibinsz_opt.json
share/table2/: b1_abs10_dim3.json  b2_abs10_dim1.json  b2_abs10_dim2.json  b2_abs10_dim3.json  b2_abs45_dim3.json  b2_abs90_dim3.json  b3_abs10_dim3.json  b3_abs90_dim2.json
share/tune/: blosc-6.json  blosc.json  roibin_blosc-6.json  roibin_sz3.json  untune-blosc-9.json  untune-roibin_blosc-6.json  untune-roibin_blosc-9.json  untune-roibin_blosc.json  untune-roibin_sz3.json
src/: debug_helpers.cc  extract_subset.cc  file_helpers.cc  hdf5_helpers.cc  hello_world.cc  partition.cc  pressio_load.cc  roibin_test.cc  roibin_test_version.h.in  test_sendfile.cc  timeout.cc
